typewire/tests/compile_fail/transparent_multi_tuple.rs
use typewire::Typewire;

#[derive(Typewire)]
#[serde(transparent)]
struct Bad(u32, String);

fn main() {}
